--- a/styles.css
+++ b/styles.css
@@ -51,14 +51,15 @@ nav ul {
     padding: 10px 20px;
 }
 
-
+nav ul li {
+    margin: 0 15px;
 }
 
 nav ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 1.1em;
-    padding: 8px 15px;
+    padding: 8px 0px;
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
 }
